--- a/cyber-security/css/bccyber.css
+++ b/cyber-security/css/bccyber.css
@@ -175,8 +175,16 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    color: #ff7700;
+    font-family: Helvetica,Arial;
+    color: #fff;
+    font-weight: 500;
+}
+
+.navbar-default .navbar-brand:hover .tag-line,
+.navbar-default .navbar-brand:focus .tag-line,
+.navbar-default .navbar-brand:active .tag-line,
+.navbar-default .navbar-brand.active .tag-line {
+    color: #fff;
 }
 
 .navbar-default .navbar-brand:hover,
@@ -242,9 +250,9 @@ fieldset[disabled] .btn-xl.active {
 
     .navbar-default .navbar-brand {
         font-size: 2em;
-        -webkit-transition: all .3s;
-        -moz-transition: all .3s;
-        transition: all .3s;
+        -webkit-transition: font-size .3s;
+        -moz-transition: font-size .3s;
+        transition: font-size .3s;
     }
 
     .navbar-default .navbar-nav>.active>a {
