Added scrolling header

--- a/cyber-security/css/bccyber.css
+++ b/cyber-security/css/bccyber.css
@@ -305,12 +305,34 @@ header .intro-text .intro-lead-in {
 }
 
 header .intro-text .intro-heading {
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 50px;
     font-weight: 700;
     line-height: 50px;
+}
+header .intro-text {
+    padding-top: 100px;
+    padding-bottom: 50px;
+    margin-bottom: 50px;
+}
+
+header .intro-examples {
+    font-size: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+    /*font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
+}
+
+header .intro-examples div {
+    width: 380px;
+    text-align: left;
+    display: inline-block;
+}
+
+.swap {
+    position: relative;
 }
 
 @media(min-width:768px) {
@@ -328,7 +350,6 @@ header .intro-text .intro-heading {
     }
 
     header .intro-text .intro-heading {
-        margin-bottom: 50px;
         text-transform: uppercase;
         font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 75px;
